--- a/Front/index.html
+++ b/Front/index.html
@@ -86,6 +86,8 @@
         </div>
       </div>
 
+      <div class="clo-md-12" id="AlertaEmail" style="display: none;"></div>
+
       <div class="col-md-6">
         <div class="form-floating mb-3">
           <input type="email" class="form-control" id="EmailC">
@@ -118,8 +120,8 @@
 
       <div class="col-md-6">
         <div class="form-floating mb-3">
-          <input type="number" class="form-control" id="Edad">
-          <label for="floatingInput">Edad</label>
+          <input type="date" class="form-control" id="Edad">
+          <label for="floatingInput">Fecha de Nacimiento</label>
         </div>
       </div>
 
