--- a/Front/index.html
+++ b/Front/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<div class="container-fluid">
+<div class="container" style="width: 70%;">
 
     <section id="seccionLog">
 
